k8s/db/kube-manifest/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /li
        backend:
          serviceName: python-app
          servicePort: 5000 
      - path: /insertemployee
        backend:
          serviceName: python-app
          servicePort: 5000
